Fix youtube iframe on mobile, fix main text display on mobile.

--- a/src/theme/BlogPostItem/Content/styles.module.scss
+++ b/src/theme/BlogPostItem/Content/styles.module.scss
@@ -1,5 +1,6 @@
 .youtubeWrapper {
   max-width: min(100%, 90vw);
+  max-height: min(500px, 40vh);
   align-self: center;
   width: 100%;
   height: 500px;
